# sonar-render

./: .gitignore  Dockerfile  README.md  build.sh  ec2_spot.sh  launch-spec.json  rectangular_plate.stl  requirements.txt  runDocker.sh  setup.sh  ssh-ec2  test.sh
CudaModel/CudaLibrary/: CudaFunctions.cu  CudaFunctions.cuh  ProjectFacetToPoint.cu  makefile
CudaModel/CudaModel/: CudaModelold.cpp  Cuda_model.xml  Main.cpp  PointData.h  ReadMe.txt  TraceObject.h
docs/: Discrete_Kirchhoff.aux  Discrete_Kirchhoff.fdb_latexmk  Discrete_Kirchhoff.fls  Discrete_Kirchhoff.tex  clean.sh
ec2_spot/: cancel-spot-request.py  ec2_spot.sh  fleet-spec.json  initialise.py  launch-spec.json  list-ec2-spot-available.py  list-instances  list-instances.py  request-spot.py  ssh-ec2  update_spot_request.py
run_scripts/: BeTTSi_run1.py  Geometry.py  ModelHelpers.py  TES_Model_API.py  cube.py  cube_1m.stl  make_animation.py  rect_bistatic.py  rect_mono.py  reflector.py  reflector2.py  run_container.sh  sphere.py  test.py  trihedral_reflector.stl
run_scripts/modules/: api.py  aws.py  geo.py  mh.py
src/: CMakeLists.txt  Collision.cpp  Collision.cu  Collision.hpp  CollisionDetect.cu  CollisionShared.h  CudaModelTes.cu  CudaModelTes.cuh  CudaUtils.cu  CudaUtils.cuh  Facet.cpp  Facet.hpp  FacetCuda.cpp  FacetCuda.cu  FacetCuda.hpp  FacetGl.cpp  FacetGl.cu  FacetGl.hpp  GeoMath.h  Globals.cpp  Globals.h  Model.cpp  Model.hpp  ModelCuda.cpp  ModelCuda.hpp  ModelGl.cpp  ModelGl.hpp  ModelShared.h  ModelTes.cpp  ModelTes.hpp  Object.cpp  Object.hpp  ObjectCuda.cpp  ObjectCuda.hpp  ObjectGl.cpp  ObjectGl.hpp  OpenGL_TES.cpp  OpenGL_TES.hpp  OpenGlTes.cpp  OpenGlTes.hpp  (+13 more)
src/OptiX/: Exception.h  build.sh  main.cpp  vec_math.h
src/Optix/: CMakeLists.txt  device_programs.cu  main.cpp
src/host/: CudaModelTes.cu  CudaModelTes.cuh  CudaUtils.cu  Facet.cpp  Facet.hpp  GeoMath.h  Makefile  ModelTes.hpp  PressurePoint.hpp  ProjectSourcePointsToFacet.cu  dcomplex.h  python_interface.cpp
src/include/glad/: egl.h  gl.h
testing/: ComplexMap.py  Geometry.py  ModelHelpers.py  Rectange_Plate.py  RectangularMonostatic copy.py  RectangularMonostatic.py  TES_Model_API.py  cube.py  load_stl_to_cuda.py  make_rectangle.py  rect_bistatic.py  rect_mono.py  rectangular_plate.stl  show_stl.py  sphere.py
visualise/: OpenGL.cu  Test.c
